NOJIRA Cluster needs to be in framework Javadoc doesnt work without a larger stack space.
git-svn-id: https://source.sakaiproject.org/svn/sakai/trunk@40113 66ffb92e-73f9-0310-93c1-f5514f145a0a