@@ -49,9 +49,6 @@
     </profile>
     <profile>
       <id>framework</id>
-      <properties>
-         <build.version>K</build.version>
-      </properties>
       <modules>
         <module>access</module>
         <module>alias</module>
@@ -63,6 +60,8 @@
         <module>content</module>
         <module>courier</module>
         <module>course-management/cm-api/api</module>
+        <module>cluster</module>
+        <module>dav</module>
         <module>db</module>
         <module>email</module>
         <module>entity</module>
@@ -232,6 +231,24 @@
 
   <reporting>
     <plugins>
+         <plugin>
+            <!-- javadocs -->
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-javadoc-plugin</artifactId>
+            <configuration>
+               <debug>true</debug>
+               <links>
+                  <link>http://java.sun.com/j2se/1.5.0/docs/api/</link>
+               </links>
+               <breakiterator>true</breakiterator>
+               <verbose>false</verbose>
+               <aggregate>true</aggregate>
+               <maxmemory>512m</maxmemory>
+               <additionalJOption>-J-Xms168m -J-Xmx512m -J-XX:PermSize=128m -J-XX:NewSize=64m</additionalJOption>
+               <version>2.3</version>
+            </configuration>
+         </plugin>
+<!--
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
@@ -239,6 +256,7 @@
           <aggregate>true</aggregate>
         </configuration>
       </plugin>
+-->
     </plugins>
   </reporting>
 
